# AdventOfCode_2024

./: CMakeLists.txt
2023_day24/: CMakeLists.txt  day_24_a.cpp  day_24_b.cpp  input.hpp
common/: file_line.cpp  file_line.hpp  strutils.hpp
day01/: CMakeLists.txt  day_01_a.cpp  day_01_b.cpp  input.hpp
day01_elab/: CMakeLists.txt  day_01_a.cpp  day_01_b.cpp
day02/: CMakeLists.txt  day_02_a.cpp  day_02_b.cpp  input.hpp
day03/: CMakeLists.txt  day_03_a.cpp  day_03_b.cpp  input.hpp
day04/: CMakeLists.txt  day_04_a.cpp  day_04_b.cpp  input.hpp
day_abc_template/: CMakeLists.txt  day_01_a.cpp  day_01_b.cpp  input.hpp
ext/: CMakeLists.txt
